# transformerz.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  fix_python_modules_paths.py  setup.cfg  tutorial.ipynb
.ci/: aptPackagesToInstall.txt  installDependencies.sh
tests/: test.py
transformerz/: __init__.py  compression.py  processors.py  struct.py  text.py
transformerz/core/: TransformersRegistry.py  __init__.py
transformerz/kaitai/compress/algorithms/: brotli.py  bz2.py  lz4.py  lzma.py  snappy.py  zlib.py  zstd.py
transformerz/kaitai/compress/core/: __init__.py
transformerz/serialization/: __init__.py  bson.py  cbor.py  json.py  msgpack.py  pon.py  python.py  yaml.py
