[metadata]
name = transformerz
version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/transformerz.py
description = Just a library implementing composable and stackable processor objects for data.
long_description = file: ReadMe.md
keywords = processors, json, cbor, msgpack, bson
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3

[options.extras_require]
bson = pymongo
msgpack = msgpack
yaml = ruamel.yaml
lz4 = lz4
brotli = brotli
zstd = zstandard
